--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
                 <p>&#9733;&#9733;&#9733;&#9733;&#9733; <span class = "review">10 Reviews</span></p>
                 <p>A mug based off of the sesame street character, Oscar the Grouch, with a cookie holder.</p>
                 <span class="wasPrice">Was $16.99</span> <span class="nowPrice">Now $<span id = "price">12.74</span></span>
-                <hr>
-                <!-- <a href = "#title" class = "contShop">Continue Shopping</a> -->
+                <hr>ass = "contShop">Continue Shopping</a> -->
 
                 <input class = 'contShop' type = 'submit' value="Add to Bag" onclick = 'passvalues();'>
 
@@ -109,7 +108,6 @@
                 <p>A mug designed to look like 3 donuts with a working pipe attached to the side of the mug.</p>
                 <span class="wasPrice2">Was $24.99</span> <span class="nowPrice2">Now $<span id = "price2">18.74</span></span>
                 <hr>
-                <!-- <a href = "#title" class = "contShop2">Continue Shopping</a> -->
 
                 <input class = 'contShop2' type = 'submit' value="Add to Bag" onclick = 'passvalues2();'>
 
@@ -154,7 +152,6 @@
                 <p>A mug made to look like the lovable and always sleeping Snorlax from the popular video game series, Pokémon!</p>
                 <span class="wasPrice3">Was $19.99</span> <span class="nowPrice3">Now $<span id = "price3">14.99</span></span>
                 <hr>
-                <!-- <a href = "#title" class = "contShop3">Continue Shopping</a> -->
 
                 <input class = 'contShop3' type = 'submit' value="Add to Bag" onclick = 'passvalues3();'>
 
@@ -189,9 +186,7 @@
       </div>
 
       <!-- JS Part -->
-      <!-- <div>
-        <a href = "#modalWindowV" class = "addButV">View Item</a>
-      </div> -->
+
       <!-- Modal Window Valentine's Day -->
         <div class = "modalBackV" id = "modalWindowV">
           <div class = "modalFrontV">
