--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- Modal Window End -->
 
       <div class = "imgCont3">
-        <img src = "images/DonutMug.jpg" alt = "Donut mug with Pipe" title = "Donut Mug with Pipe">
+        <img src = "images/donutMug.jpg" alt = "Donut mug with Pipe" title = "Donut Mug with Pipe">
         <hr class = 'hor'>
 
         <h3 class = "description2">Donut Mug with Pipe</h3>
