--- a/checkout.html
+++ b/checkout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="project2.css">
   </head>
   <body>
-    <form action="thankyou.html" method="post">
+    <form action="thankyou.html" method="get">
       <fieldset style = 'width: 60%;'>
         <legend>CHECKOUT</legend>
 
